--- a/wordhunt-clone/package.json
+++ b/wordhunt-clone/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.3.1",
     "ajv": "^8.11.0",
     "ajv-keywords": "^5.1.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
