--- a/wordhunt_frontend/package.json
+++ b/wordhunt_frontend/package.json
@@ -15,6 +15,8 @@
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
+    "firebase": "^11.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
