--- a/wordhunt_backend/package.json
+++ b/wordhunt_backend/package.json
@@ -16,7 +16,8 @@
     "express": "^4.21.1",
     "firebase-admin": "^12.7.0",
     "serverless-http": "^3.2.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "word-list-json": "^0.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
